--- a/httpd.conf
+++ b/httpd.conf
@@ -244,8 +244,8 @@ ServerAdmin you@example.com
 #
 #DocumentRoot "/data/data/com.termux/files/usr/share/apache2/default-site/htdocs"
 #<Directory "/data/data/com.termux/files/usr/share/apache2/default-site/htdocs">
-DocumentRoot "/data/data/com.termux/files/home/htdocs"
-<Directory "/data/data/com.termux/files/home/htdocs">
+DocumentRoot "/sdcard/phpserver/htdocs"
+<Directory"/sdcard/phpserver/htdocs"
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
